remove references to --enable-native-access